[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Ethereum compatibility full block processing emulation pallet for Darwinia."
edition     = "2018"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "dvm-ethereum"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "2.1.0"

[dependencies]
# crates
array-bytes    = { version = "1.1.0" }
codec          = { package = "parity-scale-codec", version = "2.0.1", default-features = false }
ethereum       = { version = "0.7.1", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.11.0", default-features = false }
evm            = { version = "0.25.0", default-features = false, features = ["with-codec"] }
libsecp256k1   = { version = "0.3.5", default-features = false }
rlp            = { version = "0.5.0", default-features = false }
serde          = { version = "1.0.124", optional = true, default-features = false }
sha3           = { version = "0.9.1", default-features = false }
log            = { version = "0.4.14" }
# darwinia
darwinia-evm        = { default-features = false, path = "../evm" }
darwinia-support    = { default-features = false, path = "../support" }
dp-evm              = { default-features = false, path = "../../primitives/evm" }
dp-storage          = { default-features = false, path = "../../primitives/storage" }
dp_consensus        = { default-features = false, path = "../../primitives/consensus" }
dvm-rpc-runtime-api = { default-features = false, path = "./rpc/runtime-api" }
# substrate
frame-support    = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.2" }
frame-system     = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.2" }
pallet-timestamp = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.2" }
sp-core          = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.2" }
sp-io            = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.2" }
sp-runtime       = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.2" }
sp-std           = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.2" }

[dev-dependencies]
# darwinia
darwinia-balances       = { path = "../balances" }
darwinia-evm-precompile = { path = "../evm/precompile" }

[features]
default = ["std"]

std = [
	"crates-std",
	"darwinia-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"ethereum/std",
	"ethereum-types/std",
	"evm/std",
	"libsecp256k1/std",
	"rlp/std",
	"serde",
	"sha3/std",
]
darwinia-std  = [
	"darwinia-evm/std",
	"darwinia-support/std",
	"dp-evm/std",
	"dp_consensus/std",
	"dvm-rpc-runtime-api/std",
]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
