[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Ethereum compatibility full block processing emulation pallet for Darwinia."
edition     = "2021"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "dvm-ethereum"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "2.7.1"

[dependencies]
# crates.io
codec          = { package = "parity-scale-codec", version = "2.1", default-features = false }
ethereum       = { version = "0.9", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.12", default-features = false }
libsecp256k1   = { version = "0.5", default-features = false, features = ["static-context", "hmac"] }
log            = { version = "0.4" }
rlp            = { version = "0.5", default-features = false }
serde          = { version = "1.0", optional = true }
sha3           = { version = "0.9", default-features = false }
# darwinia-network
darwinia-evm        = { default-features = false, path = "../evm" }
darwinia-support    = { default-features = false, path = "../support" }
dp-consensus        = { default-features = false, path = "../../primitives/consensus" }
dp-evm              = { default-features = false, path = "../../primitives/evm" }
dp-storage          = { default-features = false, path = "../../primitives/storage" }
dvm-rpc-runtime-api = { default-features = false, path = "./rpc/runtime-api" }
evm                 = { default-features = false, features = ["with-codec"], git = "https://github.com/darwinia-network/evm", branch = "darwinia-v0.11.8" }
# paritytech
frame-support    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }
frame-system     = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }
pallet-timestamp = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }
sp-core          = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }
sp-io            = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }
sp-runtime       = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }
sp-std           = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }

[dev-dependencies]
# crates.io
array-bytes = { version = "1.4" }
ethabi      = { version = "15.0" }
# darwinia-network
darwinia-balances                = { path = "../balances" }
darwinia-evm-precompile-simple   = { path = "../evm/precompile/contracts/simple" }
darwinia-evm-precompile-transfer = { path = "../evm/precompile/contracts/transfer" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"ethereum/std",
	"ethereum-types/std",
	"evm/std",
	"libsecp256k1/std",
	"rlp/std",
	"serde",
	"sha3/std",
	# darwinia-network
	"darwinia-evm/std",
	"darwinia-support/std",
	"dp-evm/std",
	"dp-storage/std",
	"dp-consensus/std",
	"dvm-rpc-runtime-api/std",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]

try-runtime = [
	"frame-support/try-runtime",
]
