[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Ethereum compatibility full block processing emulation pallet for Darwinia."
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "dvm-ethereum"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.8.4"

[dependencies]
# crates.io
codec          = { package = "parity-scale-codec", version = "2.2", default-features = false }
ethereum       = { version = "0.10", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.12", default-features = false }
evm            = { version = "0.30", default-features = false, features = ["with-codec"] }
log            = { version = "0.4" }
rlp            = { version = "0.5", default-features = false }
scale-info     = { version = "1.0", default-features = false, features = ["derive"] }
serde          = { version = "1.0", optional = true }
sha3           = { version = "0.9", default-features = false }
# darwinia-network
darwinia-evm        = { default-features = false, path = "../evm" }
darwinia-support    = { default-features = false, path = "../support" }
dp-consensus        = { default-features = false, path = "../../primitives/consensus" }
dvm-rpc-runtime-api = { default-features = false, path = "rpc/runtime-api" }
# paritytech
frame-support    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
frame-system     = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
pallet-timestamp = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-core          = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-io            = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-runtime       = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-std           = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
# frontier
fp-evm            = { default-features = false, git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.1" }
fp-self-contained = { default-features = false, git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.1" }
fp-storage        = { default-features = false, git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.1" }

[dev-dependencies]
# crates.io
array-bytes  = { version = "1.4" }
ethabi       = { version = "15.0" }
libsecp256k1 = { version = "0.5", features = ["static-context", "hmac"] }
# darwinia-network
darwinia-balances                = { path = "../balances" }
darwinia-evm-precompile-transfer = { path = "../evm/precompile/contracts/transfer" }
# frontier
pallet-evm-precompile-simple = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.1" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"ethereum/std",
	"ethereum-types/std",
	"evm/std",
	"rlp/std",
	"scale-info/std",
	"serde",
	"sha3/std",
	# darwinia-network
	"darwinia-evm/std",
	"darwinia-support/std",
	"dp-consensus/std",
	"dvm-rpc-runtime-api/std",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	# frontier
	"fp-evm/std",
	"fp-self-contained/std",
	"fp-storage/std",
]

try-runtime = [
	"frame-support/try-runtime",
]

runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
