[package]
name = "pallet-ethereum"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Ethereum compatibility full block processing emulation pallet for Substrate."
license = "GPL-3.0"

[dependencies]
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
frame-support ={ default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
frame-system ={ default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
pallet-balances ={ default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
pallet-timestamp ={ default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
pallet-evm ={ default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-runtime ={ default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-std ={ default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-io ={ default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
evm = { version = "0.17.0", default-features = false }
ethereum = { version = "0.3", default-features = false, features = ["codec"] }
ethereum-types = { version = "0.9", default-features = false }
rlp = { version = "0.4", default-features = false }
sha3 = { version = "0.8", default-features = false }
libsecp256k1 = { version = "0.3", default-features = false }
frontier-consensus-primitives = { path = "../../consensus/primitives", default-features = false }
frontier-rpc-primitives = { path = "../../rpc/primitives", default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.0-dev", git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }

[features]
default = ["std"]
std = [
	"serde",
	"rustc-hex/std",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"pallet-evm/std",
	"sp-io/std",
	"sp-std/std",
	"ethereum/std",
	"ethereum-types/std",
	"rlp/std",
	"sha3/std",
	"libsecp256k1/std",
	"frontier-consensus-primitives/std",
	"frontier-rpc-primitives/std",
	"evm/std",
]
