[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "FRAME EVM contracts pallet"
edition     = "2018"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "darwinia-evm"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "2.4.0"

[dependencies]
# crates
codec           = { package = "parity-scale-codec", version = "2.1.1", default-features = false }
evm             = { version = "0.25.0", default-features = false, features = ["with-codec"] }
evm-gasometer   = { version = "0.25.0", default-features = false }
evm-runtime     = { version = "0.25.0", default-features = false }
log             = { version = "0.4.14" }
primitive-types = { version = "0.9.0", default-features = false, features = ["rlp", "byteorder"] }
rlp             = { version = "0.5.0", default-features = false }
serde           = { version = "1.0.126", optional = true, default-features = false, features = ["derive"] }
sha3            = { version = "0.8", default-features = false }
# darwinia
darwinia-balances = { default-features = false, path = "../balances" }
dp-evm            = { default-features = false, path = "../../primitives/evm" }
# substrate
frame-support    = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.11.1" }
frame-system     = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.11.1" }
pallet-timestamp = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.11.1" }
sp-core          = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.11.1" }
sp-io            = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.11.1" }
sp-runtime       = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.11.1" }
sp-std           = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.11.1" }

[dev-dependencies]
darwinia-support = { features = ["easy-testing"], path = "../support" }

[features]
default = ["std"]

std = [
	"crates-std",
	"darwinia-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
darwinia-std  = [
	"darwinia-balances/std",
	"dp-evm/std",
]
substrate-std = [
	"evm/std",
	"evm/with-serde",
	"evm-gasometer/std",
	"evm-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"primitive-types/std",
	"rlp/std",
	"sha3/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
