[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "FRAME EVM contracts pallet"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-evm"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.7.2"

[dependencies]
# crates.io
array-bytes     = { version = "1.4" }
codec           = { package = "parity-scale-codec", version = "2.1", default-features = false }
evm             = { version = "0.30", default-features = false, features = ["with-codec"] }
evm-gasometer   = { version = "0.30", default-features = false }
evm-runtime     = { version = "0.30", default-features = false }
log             = { version = "0.4" }
primitive-types = { version = "0.10", default-features = false, features = ["rlp", "byteorder"] }
rlp             = { version = "0.5", default-features = false }
serde           = { version = "1.0", optional = true, features = ["derive"] }
sha3            = { version = "0.9", default-features = false }
# darwinia-network
darwinia-balances = { default-features = false, path = "../balances" }
darwinia-support  = { default-features = false, path = "../support" }
dp-evm            = { default-features = false, path = "../../primitives/evm" }
# paritytech
frame-benchmarking = { optional = true, default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }
frame-support      = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }
frame-system       = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }
pallet-timestamp   = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }
sp-core            = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }
sp-io              = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }
sp-runtime         = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }
sp-std             = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }

[dev-dependencies]
# darwinia-network
darwinia-support = { features = ["easy-testing"], path = "../support" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"evm/std",
	"evm/with-serde",
	"evm-gasometer/std",
	"evm-runtime/std",
	"primitive-types/std",
	"rlp/std",
	"serde",
	"sha3/std",
	# darwinia-network
	"darwinia-balances/std",
	"darwinia-support/std",
	"dp-evm/std",
	# paritytech
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]

runtime-benchmarks = [
	"frame-benchmarking",
]
