[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "FRAME EVM contracts pallet"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-evm"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.8.3"

[dependencies]
# crates.io
array-bytes     = { version = "1.4" }
codec           = { package = "parity-scale-codec", version = "2.2", default-features = false }
evm             = { version = "0.30", default-features = false, features = ["with-codec"] }
evm-gasometer   = { version = "0.30", default-features = false }
evm-runtime     = { version = "0.30", default-features = false }
log             = { version = "0.4" }
primitive-types = { version = "0.10", default-features = false, features = ["rlp", "byteorder"] }
rlp             = { version = "0.5", default-features = false }
scale-info      = { version = "1.0", default-features = false, features = ["derive"] }
serde           = { version = "1.0", optional = true, features = ["derive"] }
sha3            = { version = "0.9", default-features = false }
# darwinia-network
darwinia-balances = { default-features = false, path = "../balances" }
darwinia-support  = { default-features = false, path = "../support" }
# paritytech
frame-benchmarking = { optional = true, default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
frame-support      = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
frame-system       = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
pallet-timestamp   = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-core            = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-io              = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-runtime         = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-std             = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
# frontier
fp-evm = { default-features = false, git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.1" }

[dev-dependencies]
# darwinia-network
darwinia-support = { features = ["easy-testing"], path = "../support" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"evm/std",
	"evm/with-serde",
	"evm-gasometer/std",
	"evm-runtime/std",
	"primitive-types/std",
	"rlp/std",
	"scale-info/std",
	"serde",
	"sha3/std",
	# darwinia-network
	"darwinia-balances/std",
	"darwinia-support/std",
	# paritytech
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	# frontier
	"fp-evm/std",
]

runtime-benchmarks = [
	"frame-benchmarking",
]
