[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Pallet for logging MMR into header digest"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-header-mmr"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.7.2"

[dependencies]
# crates.io
codec = { package = "parity-scale-codec", version = "2.1", default-features = false }
log   = { version = "0.4" }
serde = { version = "1.0", optional = true, features = ["derive"] }
# darwinia-network
darwinia-header-mmr-rpc-runtime-api = { default-features = false, path = "./rpc/runtime-api" }
darwinia-relay-primitives           = { default-features = false, path = "../../primitives/relay" }
darwinia-support                    = { default-features = false, path = "../support" }
mmr                                 = { package = "ckb-merkle-mountain-range", default-features = false, git = "https://github.com/darwinia-network/merkle-mountain-range" }
# paritytech
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sp-core       = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sp-io         = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }

[dev-dependencies]
# crates.io
array-bytes = { version = "1.4" }
serde_json  = { version = "1.0" }
# paritytech
sp-tracing = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"serde",
	# darwinia-network
	"darwinia-header-mmr-rpc-runtime-api/std",
	"darwinia-relay-primitives/std",
	"darwinia-support/std",
	"mmr/std",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]

easy-testing = []

try-runtime = [
	"frame-support/try-runtime",
]
